[gd_scene load_steps=6 format=2]

[ext_resource path="res://recursos/Enemies/spikeMan_walk1.png" type="Texture" id=1]
[ext_resource path="res://recursos/Enemies/spikeMan_walk2.png" type="Texture" id=2]
[ext_resource path="res://juego/enemigos/Pinchon.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.1875, 2 )

[node name="Pinchon" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource( 3 )

[node name="Animacion" type="AnimatedSprite" parent="."]
position = Vector2( 0, -39 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "caminar"

[node name="ColisionadorPies" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.8125, -3 )
shape = SubResource( 2 )

[node name="DetectorDeVacio" type="RayCast2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 25, -5 )
z_index = 35
z_as_relative = false
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="DetectorPared" type="RayCast2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 25, -25 )
z_index = 35
z_as_relative = false
enabled = true
cast_to = Vector2( 15, 0 )
collision_mask = 4

[node name="DetectorJugador" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectorJugador"]
visible = false
modulate = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, -77, -8, -48, -12, -43, -16, -37, -18, -33, -18, -10, 18, -10, 18, -34, 16, -38, 10, -45, 6, -49 )

[connection signal="body_entered" from="DetectorJugador" to="." method="_on_DetectorJugador_body_entered"]
